--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,11 @@ on:
       PG_VERSION:
         description: 'Postgres version'
         required: true
-        default: '15.3'
+        default: '17.2'
       EXTENSIONS:
         description: 'Postgres extensions to install'
         required: true
-        default: 'cron timescaledb'
-      TIMESCALEDB_VERSION:
-        description: 'TimescaleDB version'
-        required: true
-        default: '2.11.0'
+        default: 'cron plv8'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,9 +32,6 @@ jobs:
         # this is good but it leaves a trailing space. Fix it:
         export EXTENSIONS=$(echo "${EXTENSIONS}" | sed 's/ $//g')
 
-        # step 2: if exists, replace extension timescaledb with its versioned equivalent; replace spaces with dashes
-        export EXTENSIONS=$(echo "${{ github.event.inputs.EXTENSIONS }}" | sed 's/timescaledb/timescaledb-${{ github.event.inputs.TIMESCALEDB_VERSION }}/g;s/ /-/g')
-
         # step 3: output variable to github action
         echo "IMAGE_TAG=${{ github.event.inputs.PG_VERSION }}-${EXTENSIONS}" >> $GITHUB_OUTPUT
     - uses: docker/build-push-action@v3
@@ -50,4 +43,3 @@ jobs:
         build-args: |
           POSTGRESQL_VERSION=${{ github.event.inputs.PG_VERSION }}
           EXTENSIONS=${{ github.event.inputs.EXTENSIONS }}
-          TIMESCALEDB_VERSION=${{ github.event.inputs.TIMESCALEDB_VERSION }}
